IronDragon/obj/Debug/DragonParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/nihilist/dev/EternityChronicles/IronDragon/Parser/DragonParser.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace IronDragon.Parser {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class DragonParser : Parser {
	public const int
		NEWLINE=1, SEMICOLON=2, IF=3, WHILE=4, UNLESS=5, UNTIL=6, SWITCHOP=7, 
		ASSIGN=8, BREAK=9, RETRY=10, CONTINUE=11, THROW=12, LBRACE=13, RBRACE=14, 
		SWITCH=15, CASE=16, COLON=17, DEFAULT=18, LOOP=19, FOR=20, LPAREN=21, 
		IDENTIFIER=22, IN=23, RPAREN=24, DO=25, ELSE=26, RETURN=27, SET=28, CONST=29, 
		ADDASSIGN=30, SUBASSIGN=31, MULASSIGN=32, DIVASSIGN=33, MODASSIGN=34, 
		SHLASSIGN=35, SHRASSIGN=36, ANDASSIGN=37, ORASSIGN=38, XORASSIGN=39, EXPASSIGN=40, 
		CONDASSIGNO=41, CONDASSIGNA=42, INCREMENT=43, DECREMENT=44, OP=45, BACKWARDPIPE=46, 
		FORWARDPIPE=47, LOGICALOR=48, LOGICALXOR=49, LOGICALAND=50, COMPARE=51, 
		REGEXMATCH=52, REGEXNOMATCH=53, EQUAL=54, NOTEQUAL=55, LESSTHANEQUAL=56, 
		LESSTHAN=57, GREATERTHANEQUAL=58, GREATERTHAN=59, BITWISEXOR=60, BITWISEOR=61, 
		BITWISEAND=62, SHIFTLEFT=63, SHIFTRIGHT=64, PLUS=65, MINUS=66, MULTIPLY=67, 
		DIVIDE=68, MODULO=69, NOT=70, BITWISEINVERSE=71, TYPEOF=72, YIELD=73, 
		UNDEF=74, STRING=75, REMOVE=76, EXPONENT=77, LBRACKET=78, RBRACKET=79, 
		HASH=80, COMMA=81, BRACKETS=82, NUMBER=83, INTEGER=84, NIL=85, TRUE=86, 
		FALSE=87, DOT=88, CLASS=89, SELF=90, SUPER=91, CONTEXT=92, IRANGE=93, 
		ERANGE=94, WHENCOMP=95, UPLUS=96, UMINUS=97, BRACKETSASSIGN=98, DCOLON=99, 
		DEF=100, END=101, ALIAS=102, INCLUDE=103, MODULE=104, BEGIN=105, ENSURE=106, 
		RESCUE=107, SYNC=108, REGEX=109, COMMENT=110;
	public const int
		RULE_program = 0, RULE_block_contents = 1, RULE_term = 2, RULE_term_top_level_statement = 3, 
		RULE_top_level_statement = 4, RULE_conditional_statement = 5, RULE_statement = 6, 
		RULE_block = 7, RULE_switch_construct = 8, RULE_case_block = 9, RULE_default_block = 10, 
		RULE_loop_construct = 11, RULE_for_construct = 12, RULE_for_in_construct = 13, 
		RULE_until_construct = 14, RULE_do_until_construct = 15, RULE_while_construct = 16, 
		RULE_do_while_construct = 17, RULE_unless_construct = 18, RULE_if_else_construct = 19, 
		RULE_else_part = 20, RULE_return_expression = 21, RULE_expression = 22, 
		RULE_prefix_increment = 23, RULE_postfix_increment = 24, RULE_assignment = 25, 
		RULE_prefix_op = 26, RULE_postfix_op = 27, RULE_arg = 28, RULE_op_expression = 29, 
		RULE_pipe_op = 30, RULE_pipe_expression = 31, RULE_range_op = 32, RULE_range_expression = 33, 
		RULE_logical_or_expression = 34, RULE_logical_xor_expression = 35, RULE_logical_and_expression = 36, 
		RULE_equality_op_eq_neq = 37, RULE_equality_op = 38, RULE_equality_expression = 39, 
		RULE_comparison_op = 40, RULE_comparison_expression = 41, RULE_bitwise_or_op = 42, 
		RULE_bitwise_or_expression = 43, RULE_bitwise_and_expression = 44, RULE_shift_op = 45, 
		RULE_shift_expression = 46, RULE_additive_op = 47, RULE_additive_expression = 48, 
		RULE_multiplicative_op = 49, RULE_multiplicative_expression = 50, RULE_unary_expression = 51, 
		RULE_power_expression = 52, RULE_atom = 53, RULE_primary_right_side_parens = 54, 
		RULE_primary_right_side_access = 55, RULE_primary_right_side_yield_block = 56, 
		RULE_primary_right_side_parens_access = 57, RULE_primary_function_call = 58, 
		RULE_primary_left_side = 59, RULE_primary = 60, RULE_hash = 61, RULE_single_hash_key = 62, 
		RULE_hash_key = 63, RULE_array = 64, RULE_literal = 65, RULE_symbol = 66, 
		RULE_lvalue = 67, RULE_lvalue_instance_ref_opt = 68, RULE_lvalue_instance_ref = 69, 
		RULE_lvalue_method_change = 70, RULE_lvalue_access = 71, RULE_variable = 72, 
		RULE_call_args = 73, RULE_call_arg_single_hash = 74, RULE_call_arg = 75, 
		RULE_first_arg = 76, RULE_first_var_arg = 77, RULE_first_block_arg = 78, 
		RULE_end_var_arg = 79, RULE_end_block_arg = 80, RULE_next_arg = 81, RULE_definition_argument_list_no_paren = 82, 
		RULE_definition_argument_list = 83, RULE_function_name = 84, RULE_function_definition = 85, 
		RULE_anonymous_function = 86, RULE_yield_block = 87, RULE_do_yield_block = 88, 
		RULE_parallel_assign_left = 89, RULE_parallel_assign_left_item = 90, RULE_parallel_assign_right = 91, 
		RULE_parallel_assign_right_item = 92, RULE_alias = 93, RULE_alias_part = 94, 
		RULE_include = 95, RULE_class_declaration = 96, RULE_anonymous_class_declaration = 97, 
		RULE_module_declaration = 98, RULE_begin_construct = 99, RULE_rescue_block = 100, 
		RULE_rescue_else_block = 101, RULE_rescue_ensure_block = 102, RULE_identifiers = 103, 
		RULE_sync_construct = 104;
	public static readonly string[] ruleNames = {
		"program", "block_contents", "term", "term_top_level_statement", "top_level_statement", 
		"conditional_statement", "statement", "block", "switch_construct", "case_block", 
		"default_block", "loop_construct", "for_construct", "for_in_construct", 
		"until_construct", "do_until_construct", "while_construct", "do_while_construct", 
		"unless_construct", "if_else_construct", "else_part", "return_expression", 
		"expression", "prefix_increment", "postfix_increment", "assignment", "prefix_op", 
		"postfix_op", "arg", "op_expression", "pipe_op", "pipe_expression", "range_op", 
		"range_expression", "logical_or_expression", "logical_xor_expression", 
		"logical_and_expression", "equality_op_eq_neq", "equality_op", "equality_expression", 
		"comparison_op", "comparison_expression", "bitwise_or_op", "bitwise_or_expression", 
		"bitwise_and_expression", "shift_op", "shift_expression", "additive_op", 
		"additive_expression", "multiplicative_op", "multiplicative_expression", 
		"unary_expression", "power_expression", "atom", "primary_right_side_parens", 
		"primary_right_side_access", "primary_right_side_yield_block", "primary_right_side_parens_access", 
		"primary_function_call", "primary_left_side", "primary", "hash", "single_hash_key", 
		"hash_key", "array", "literal", "symbol", "lvalue", "lvalue_instance_ref_opt", 
		"lvalue_instance_ref", "lvalue_method_change", "lvalue_access", "variable", 
		"call_args", "call_arg_single_hash", "call_arg", "first_arg", "first_var_arg", 
		"first_block_arg", "end_var_arg", "end_block_arg", "next_arg", "definition_argument_list_no_paren", 
		"definition_argument_list", "function_name", "function_definition", "anonymous_function", 
		"yield_block", "do_yield_block", "parallel_assign_left", "parallel_assign_left_item", 
		"parallel_assign_right", "parallel_assign_right_item", "alias", "alias_part", 
		"include", "class_declaration", "anonymous_class_declaration", "module_declaration", 
		"begin_construct", "rescue_block", "rescue_else_block", "rescue_ensure_block", 
		"identifiers", "sync_construct"
	};

	private static readonly string[] _LiteralNames = {
	};
	private static readonly string[] _SymbolicNames = {
		null, "NEWLINE", "SEMICOLON", "IF", "WHILE", "UNLESS", "UNTIL", "SWITCHOP", 
		"ASSIGN", "BREAK", "RETRY", "CONTINUE", "THROW", "LBRACE", "RBRACE", "SWITCH", 
		"CASE", "COLON", "DEFAULT", "LOOP", "FOR", "LPAREN", "IDENTIFIER", "IN", 
		"RPAREN", "DO", "ELSE", "RETURN", "SET", "CONST", "ADDASSIGN", "SUBASSIGN", 
		"MULASSIGN", "DIVASSIGN", "MODASSIGN", "SHLASSIGN", "SHRASSIGN", "ANDASSIGN", 
		"ORASSIGN", "XORASSIGN", "EXPASSIGN", "CONDASSIGNO", "CONDASSIGNA", "INCREMENT", 
		"DECREMENT", "OP", "BACKWARDPIPE", "FORWARDPIPE", "LOGICALOR", "LOGICALXOR", 
		"LOGICALAND", "COMPARE", "REGEXMATCH", "REGEXNOMATCH", "EQUAL", "NOTEQUAL", 
		"LESSTHANEQUAL", "LESSTHAN", "GREATERTHANEQUAL", "GREATERTHAN", "BITWISEXOR", 
		"BITWISEOR", "BITWISEAND", "SHIFTLEFT", "SHIFTRIGHT", "PLUS", "MINUS", 
		"MULTIPLY", "DIVIDE", "MODULO", "NOT", "BITWISEINVERSE", "TYPEOF", "YIELD", 
		"UNDEF", "STRING", "REMOVE", "EXPONENT", "LBRACKET", "RBRACKET", "HASH", 
		"COMMA", "BRACKETS", "NUMBER", "INTEGER", "NIL", "TRUE", "FALSE", "DOT", 
		"CLASS", "SELF", "SUPER", "CONTEXT", "IRANGE", "ERANGE", "WHENCOMP", "UPLUS", 
		"UMINUS", "BRACKETSASSIGN", "DCOLON", "DEF", "END", "ALIAS", "INCLUDE", 
		"MODULE", "BEGIN", "ENSURE", "RESCUE", "SYNC", "REGEX", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DragonParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public DragonParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public Block_contentsContext block_contents() {
			return GetRuleContext<Block_contentsContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(DragonParser.Eof, 0); }
		public TermContext[] term() {
			return GetRuleContexts<TermContext>();
		}
		public TermContext term(int i) {
			return GetRuleContext<TermContext>(i);
		}
		public Top_level_statementContext top_level_statement() {
			return GetRuleContext<Top_level_statementContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDragonParserVisitor<TResult> typedVisitor = visitor as IDragonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			State = 222;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 210; block_contents();
				State = 214;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==NEWLINE || _la==SEMICOLON) {
					{
					{
					State = 211; term();
					}
					}
					State = 216;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 217; Match(Eof);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 219; top_level_statement();
				State = 220; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Block_contentsContext : ParserRuleContext {
		public Term_top_level_statementContext[] term_top_level_statement() {
			return GetRuleContexts<Term_top_level_statementContext>();
		}
		public Term_top_level_statementContext term_top_level_statement(int i) {
			return GetRuleContext<Term_top_level_statementContext>(i);
		}
		public TermContext[] term() {
			return GetRuleContexts<TermContext>();
		}
		public TermContext term(int i) {
			return GetRuleContext<TermContext>(i);
		}
		public Block_contentsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block_contents; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDragonParserVisitor<TResult> typedVisitor = visitor as IDragonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock_contents(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Block_contentsContext block_contents() {
		Block_contentsContext _localctx = new Block_contentsContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_block_contents);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 228;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					State = 226;
					_errHandler.Sync(this);
					switch (_input.La(1)) {
					case IF:
					case WHILE:
					case UNLESS:
					case UNTIL:
					case BREAK:
					case RETRY:
					case CONTINUE:
					case THROW:
					case LBRACE:
					case SWITCH:
					case COLON:
					case LOOP:
					case FOR:
					case LPAREN:
					case IDENTIFIER:
					case DO:
					case RETURN:
					case SET:
					case CONST:
					case INCREMENT:
					case DECREMENT:
					case OP:
					case BITWISEXOR:
					case PLUS:
					case MINUS:
					case MULTIPLY:
					case NOT:
					case BITWISEINVERSE:
					case TYPEOF:
					case YIELD:
					case UNDEF:
					case STRING:
					case REMOVE:
					case LBRACKET:
					case BRACKETS:
					case NUMBER:
					case INTEGER:
					case NIL:
					case TRUE:
					case FALSE:
					case CLASS:
					case SELF:
					case SUPER:
					case CONTEXT:
					case DEF:
					case ALIAS:
					case INCLUDE:
					case MODULE:
					case BEGIN:
					case SYNC:
					case REGEX:
						{
						State = 224; term_top_level_statement();
						}
						break;
					case NEWLINE:
					case SEMICOLON:
						{
						State = 225; term();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 230;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(DragonParser.NEWLINE, 0); }
		public ITerminalNode SEMICOLON() { return GetToken(DragonParser.SEMICOLON, 0); }
		public TermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDragonParserVisitor<TResult> typedVisitor = visitor as IDragonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermContext term() {
		TermContext _localctx = new TermContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_term);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 231;
			_la = _input.La(1);
			if ( !(_la==NEWLINE || _la==SEMICOLON) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Term_top_level_statementContext : ParserRuleContext {
		public Top_level_statementContext top_level_statement() {
			return GetRuleContext<Top_level_statementContext>(0);
		}
		public TermContext term() {
			return GetRuleContext<TermContext>(0);
		}
		public Term_top_level_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term_top_level_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDragonParserVisitor<TResult> typedVisitor = visitor as IDragonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm_top_level_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Term_top_level_statementContext term_top_level_statement() {
		Term_top_level_statementContext _localctx = new Term_top_level_statementContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_term_top_level_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 233; top_level_statement();
			State = 234; term();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Top_level_statementContext : ParserRuleContext {
		public Conditional_statementContext conditional_statement() {
			return GetRuleContext<Conditional_statementContext>(0);
		}
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public Top_level_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_top_level_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDragonParserVisitor<TResult> typedVisitor = visitor as IDragonParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTop_level_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Top_level_statementContext top_level_statement() {
		Top_level_statementContext _localctx = new Top_level_statementContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_top_level_statement);
		try {
			State = 238;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 236; conditional_statement();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 237; statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
